# godot-fluent-translation

./: .gitignore  BUILDING.md  LICENSE  README.md
.github/workflows/: compile.yml  ensure_build_works.yml  make_release_files.yml
godot/: crac.gd  localization.tscn  localization_test.gd  project.godot  rust.gdextension
godot/addons/godot-fluent-translation/: godot-fluent-translation.gdextension
godot/default/: export_presets.cfg  fluent_plugin.gd  generate_ftl.gd  icon.svg.import  localization.tscn  localization_test.gd  logo.png.import  project.godot  test.en.ftl
godot/default/addons/godot-fluent-translation/: godot-fluent-translation.gdextension
godot/default/de/: german-test.ftl
godot/forked/: localization.tscn  localization_test.gd  logo.png.import  project.godot  test.fr.ftl
godot/forked/addons/godot-fluent-translation/: godot-fluent-translation.gdextension
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/src/: hacks.rs  lib.rs  utils.rs
rust/src/fluent/: editor_plugin.rs  export_plugin.rs  extractor.rs  extractor_packed_scene.rs  generator.rs  global.rs  importer.rs  locale.rs  mod.rs  project_settings.rs  strip_comments.rs  syntax_highlighter.rs  translation.rs
tools/prepare_release/: index.js  package-lock.json  package.json
