[package]
name = "godot-fluent-translation" # Appears in the filename of the compiled dynamic library.
version = "0.2.0"
edition = "2021"

[features]
# Use stable Godot build. Makes it easier to install without customization, at the cost of worse engine integration and less features.
default-godot = ["godot/lazy-function-tables"]
# Use custom Godot build but with default API. Allows using a newer Godot build (e.g. alpha) but without requiring engine modifications.
custom-godot = ["godot/lazy-function-tables", "godot/custom-godot"]
# Use forked Godot build. If you're already building your own engine version, this improves the API at the cost of making the resulting gdext library larger in file size.
forked-godot = ["godot/experimental-threads", "godot/custom-godot"]

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
constcat = "0.5.0"
fluent = { git = "https://github.com/projectfluent/fluent-rs", branch = "main" }
fluent-syntax = { git = "https://github.com/projectfluent/fluent-rs", branch = "main" }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["register-docs"] }
itertools = "0.13.0"
unic-langid = "0.9.4"
