[package]
name = "godot-fluent-translation" # Appears in the filename of the compiled dynamic library.
version = "1.0.0"
edition = "2021"

[features]
# Use stable Godot build. Makes it easier to install without customization, at the cost of worse engine integration and less features.
default-godot = []
# Use custom Godot build but with default API. Allows using a newer Godot build (e.g. alpha) but without a custom engine build.
custom-godot = ["godot/api-custom"]
# Use forked Godot build. If you're already building your own engine version, this should be the preferred method.
forked-godot = ["godot/api-custom"]

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
constcat = "0.5.0"
fluent = { git = "https://github.com/projectfluent/fluent-rs", branch = "main" }
fluent-syntax = { git = "https://github.com/projectfluent/fluent-rs", branch = "main" }
godot = { version = "0.2.4", features = ["register-docs", "lazy-function-tables"] }
itertools = "0.13.0"
unic-langid = "0.9.4"

[build-dependencies]
godot-bindings = { version = "0.2.1" }
